--- a/dev/-content.html
+++ b/dev/-content.html
@@ -27,7 +27,7 @@
 					</div>
 					<div class="Content__wrapper Content__wrapper_summ">
 						<div class="Grid">
-							<div class="Grid__item Grid__item_top">
+							<div class="Grid__item Grid__item_top Grid__item_m100">
 								<div class="Promo">
 									<p class="Promo__text">Есть промокод?</p>
 									<input class="Promo__input" type="text" placeholder="Введите промокод">
@@ -35,7 +35,7 @@
 
 								</div>
 							</div>
-							<div class="Grid__item Grid__item_alignRight Grid__item_top">
+							<div class="Grid__item Grid__item_alignRight Grid__item_top Grid__item_m100">
 								<div class="Summary">
 									<div class="Summary__wrapper">
 										<p class="Summary__text ">Сумма заказа:</p>
@@ -57,28 +57,28 @@
 							<div class="Heading">Добавьте к вашему заказу</div>
 						</div>
 						<div class="Grid">
-							<div class="Grid__item Grid__item_quarter Grid__item_top">
+							<div class="Grid__item Grid__item_quarter Grid__item_top Grid__item_m50">
 								<div class="AddBox">
 									<img class="Add__photo" src="img/icons/Add__item1.png" alt="item">
 									<p class="Add__model">Солнечные очки зеленого цвета в стиле ретро</p>
 									<p class="Add__price">2 450 руб.</p>
 								</div>
 							</div>
-							<div class="Grid__item Grid__item_quarter Grid__item_top">
+							<div class="Grid__item Grid__item_quarter Grid__item_top Grid__item_m50">
 								<div class="AddBox">
 									<img class="Add__photo" src="img/icons/Add__item2.png" alt="item">
 									<p class="Add__model">Шляпа</p>
 									<p class="Add__price">800 руб.</p>
 								</div>
 							</div>
-							<div class="Grid__item Grid__item_quarter Grid__item_top">
+							<div class="Grid__item Grid__item_quarter Grid__item_top Grid__item_m50">
 								<div class="AddBox">
 									<img class="Add__photo" src="img/icons/Add__item3.png" alt="item">
 									<p class="Add__model">Платье-миди с расклешенной юбкой</p>
 									<p class="Add__price">2 450 руб.</p>
 								</div>
 							</div>
-							<div class="Grid__item Grid__item_quarter Grid__item_top">
+							<div class="Grid__item Grid__item_quarter Grid__item_top Grid__item_m50">
 								<div class="AddBox">
 									<img class="Add__photo" src="img/icons/Add__item4.png" alt="item">
 									<p class="Add__model">Платье-миди с расклешенной юбкой</p>
