--- a/dev/-header.html
+++ b/dev/-header.html
@@ -2,13 +2,13 @@
 	<div class="Header__info">
 		<div class="Container">
 			<div class="Grid">
-				<div class="Grid__item Grid__item_40">
+				<div class="Grid__item Grid__item_40 Grid__item_100t">
 					<div class="Number Number_header">
 						<a class="Number__phone" href="tel:88005007555">8 (800) 500-75-55</a>
 						<p class="Number__text">Бесплатный звонок по России</p>
 					</div>
 				</div>
-				<div class="Grid__item Grid__item_60">
+				<div class="Grid__item Grid__item_60 Grid__item_100t">
 					<div class="Social1 Social_header">
 						<a class="Social__Link Social__Link_pic1" href="#" target="_blank">Звездный блог</a>
 						<a class="Social__Link Social__Link_pic2" href="#" target="_blank">Смотрите нас на YouTube</a>
@@ -21,7 +21,8 @@
 	<div class="Header__middle">
 		<div class="Container">
 			<div class="Grid">
-				<div class="Grid__item">
+				<div class="Grid__item Grid__item_100tm">
+					<div class="burgerBody"></div>
 					<div class="Logo Logo_header">
 						<a class="Logo__link" href="#">
 							<img class="Logo__img" src="img/icons/Header__logo.png" alt="logo">
@@ -33,7 +34,7 @@
 						<button class="Search__button"></button>
 					</div>
 				</div>
-				<div class="Grid__item Grid__item_alignRight">
+				<div class="Grid__item Grid__item_alignRight Grid__item_100tm">
 					<a class="User" href="#">Анастасия</a>
 					<a class="Basket" href="#">
 						В корзине<br> товаров :
@@ -44,7 +45,8 @@
 		</div>
 	</div>
 	<div class="Header__menu">
-		<div class="Container">	
+		<div class="Container">
+			<div class="burger"></div>
 			<ul class="Menu">
 				<li class="Menu__element">
 					<nav class="SubMenu">
